# fmu-config

./: .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  authors.html  contributing.html  examples.html  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html  yamlformat.html
.github/workflows/: codeql.yml  fmu-config.yml  fmuconfig-publish-pypi.yml
_static/: documentation_options.js
ci/: testrmsenv.sh
docs/: conf.py  config.rst  examples.rst  index.rst  installation.rst  usage.rst  yamlformat.rst
src/fmu/config/: __init__.py  _configparserfmu_ipl.py  _loader.py  _theversion.py  configparserfmu.py  etc.py  fmuconfigrunner.py  oyaml.py  tools.py  utilities.py
src/fmu_config/: __init__.py  _loader.py  configparser.py  configparserfmu.py
tests/: test_config.py  test_config_functions.py  test_etc.py  test_snippets.py  test_utilities.py
tests/data/yaml/jsverdrup/: global_master_config.yml  global_master_variables.yml
tests/data/yaml/reek1/: global_variables.yaml  global_variables.yml
tests/data/yaml/snippets/: s01.yml
tests/data/yaml/test_compare/: JS.txt  JS.txt.tmpl  global_variables.ipl  global_variables.ipl.tmpl  js_global_variables.ipl  js_global_variables.ipl.tmpl  js_global_variables_rms_nobraces.yml  js_global_variables_rms_nobraces.yml.tmpl  troll2_ipl.ipl  troll2_ipl.ipl.tmpl  troll2_json.json  troll2_json.json.tmpl  troll2_yaml.yml  troll2_yaml.yml.tmpl  troll3_yaml.yml  troll3_yaml.yml.tmpl  troll3_yaml_selfread.ipl.tmpl
tests/data/yaml/troll1/: global_variables.yaml  global_variables.yml  horizons.yml
tests/data/yaml/troll2/: global_master_config.yml  global_master_config_with_dupl.yml  global_variables.ipl.orig
tests/data/yml/ogre/: global_master_config_with_dupl.yml
(+3 files in other folders)
