[build-system]
requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
    "wheel>=0.38.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fmu/config/_theversion.py"

[project]
name = "fmu_config"
description = "Library for various config scripts in FMU scopes"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Equinor", email = "jriv@equinor.com" },
]
keywords = ["fmu", "config"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = [
    "astroid",
    "autoapi",
    "black",
    "coverage",
    "flake8",
    "isort",
    "mypy",
    "myst-parser",
    "pylint",
    "pytest",
    "pytest-runner",
    "rstcheck",
    "Sphinx",
    "sphinx_rtd_theme",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/equinor/fmu-config"
Repository = "https://github.com/equinor/fmu-config"

[project.scripts]
fmuconfig = "fmu.config.fmuconfigrunner:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = "missing-module-docstring"

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    "dist",
    "build",
]
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=.eggs"
markers = [
    "integration: Marks a test as an integration test",
]

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]
